<resources>
    <string name="app_name">Factor</string>
    <string name="my_factor_game">My Factor Game</string>
    <string name="enter">Enter</string>
    <string name="_1st">1st</string>
    <string name="_3rd">3rd</string>
    <string name="correct">Correct</string>
    <string name="_2nd">2nd</string>
    <string name="enter_the_number">Enter the number :</string>
    <string name="now_find_the_factor">Now, find the factor</string>
    <string name="correct_wrong">CORRECT/WRONG</string>
    <string name="best">Best :</string>
    <string name="try_again">Try Again</string>
</resources>
